--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 :root {
     --primary: #239bd6;
@@ -13,6 +13,10 @@
 
 .poppins {
     font-family: "Poppins", sans-serif;
+}
+
+.inter {
+    font-family: "Inter", sans-serif;
 }
 
 .btn-primary {
@@ -38,7 +42,7 @@
     background-color: wheat;
 }
 
-/* Scrollbar height */ 
+/* Scrollbar height */
 ::-webkit-scrollbar-thumb {
     background-color: var(--secondary);
     border-radius: 10px;
