--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,7 @@
     background-color: var(--accent);
     border: none;
 }
+:where(.css-dev-only-do-not-override-1okl62o).ant-checkbox-checked .ant-checkbox-inner{
+    background-color: var(--primary) !important;
+    border: var(--primary) !important;
+}
