--- a/src/App.css
+++ b/src/App.css
@@ -60,4 +60,5 @@
 :where(.css-dev-only-do-not-override-1okl62o).ant-checkbox-checked .ant-checkbox-inner{
     background-color: var(--primary) !important;
     border: var(--primary) !important;
+    /* color: #15acde40; */
 }
