update App.css, Dropdown.jsx, Messages.jsx and Sidebar.jsx

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,10 @@
 }
 
 /* Fonts  */
-
+body{
+    background-color: white;
+    color: black;
+}
 
 .poppins {
     font-family: "Poppins", sans-serif;
