--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,11 @@ body {
 select {
     background-color: white;
 }
-
+input{
+    background-color: white;
+    color: black ;
+    font-weight: 500;
+}
 @media screen and (max-width: 768px) {
     .media-grid {
         grid-template-columns: repeat(2, 1fr);
