--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,17 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
+.singleImage {
+    background-image: url('/single-bg.png');
+    border-radius: 10px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    /* z-index: 0; */
+}
+
 .poppins {
     font-family: "Poppins", sans-serif;
 }
