--- a/src/App.css
+++ b/src/App.css
@@ -17,14 +17,15 @@ body {
 }
 
 .singleImage {
-    background-image: url('/single-bg.png');
+    /* background-image: url('/single-bg.png'); */
     border-radius: 10px;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
+    min-height: 100vh;
+    overflow-y: auto;
+    padding-bottom: 50px;
     /* z-index: 0; */
+    
 }
 
 .poppins {
