--- a/src/App.css
+++ b/src/App.css
@@ -55,14 +55,14 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 3px;
+    width: 1px;
     height: 6px;
-    background-color: wheat;
+    background-color: transparent;
 }
 
 /* Scrollbar height */
 ::-webkit-scrollbar-thumb {
-    background-color: var(--secondary);
+    background-color: transparent;
     border-radius: 10px;
     height: 5px;
 }
