update 8 files and delete 1 file

--- a/src/App.css
+++ b/src/App.css
@@ -235,3 +235,7 @@ input {
     display: none !important;
     width: 0px !important;
 }
+
+.clock-in-out .ant-table-thead {
+  background-color: transparent !important;
+}
