--- a/src/App.css
+++ b/src/App.css
@@ -268,3 +268,7 @@ input {
 .disabled{
     color: rgba(128, 128, 128, 0.765) !important;
 }
+
+.css-1u0lry5-MuiChartsLegend-root {
+    display: none !important;
+}
