--- a/src/App.css
+++ b/src/App.css
@@ -269,6 +269,6 @@ input {
     color: rgba(128, 128, 128, 0.765) !important;
 }
 
-.css-1u0lry5-MuiChartsLegend-root {
+.MuiChartsLegend-root {
     display: none !important;
 }
